Finishing initial styling and contents

--- a/src/assets/styles/modules/_global.scss
+++ b/src/assets/styles/modules/_global.scss
@@ -1,7 +1,12 @@
 @import './vars';
 
+* {
+	scroll-behavior: smooth;
+}
+
 #app {
   font-family: "Lato", sans-serif;
+  background: $light-grey;
 }
 
 .container {
